Register records for reflection. Remove redundant imports